--- a/ishraq-step-main/index.html
+++ b/ishraq-step-main/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link href="css/colors.css" rel="stylesheet">
-  <link rel="icon" href="icon.jpg" type="image/x-icon">
+  <link rel="icon" href="icon.png" type="image/x-icon">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#ff8a00">
 
@@ -75,7 +75,6 @@
       </div>
 
       <div class="actions" role="navigation" aria-label="أزرار التنقل الرئيسية">
-        
         <button class="btn btn-learn" id="learnBtn" aria-label="اذهب لصفحة التعلم">
           <!-- book icon -->
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
@@ -94,8 +93,8 @@
           جروب دردشه
         </button>
 
-        <!-- NEW: زر المنشورات -->
-        <button class="btn btn-posts" id="postsBtn" aria-label="المنشورات" onclick="location.href='posts.html'">
+        <!-- زر المنشورات -->
+        <button class="btn btn-join" id="postsBtn" aria-label="المنشورات" onclick="location.href='posts.html'">
           <!-- posts icon -->
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
             <rect x="3" y="5" width="18" height="4" rx="1" fill="white" opacity="0.95"/>
