--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>جاري التحميل...</title>
-  <link rel="icon" href="ishraq-step-main\icon.jpg" type="image/x-icon">
+  <link rel="icon" href="icon.png" type="image/x-icon">
   <style>
     body {
       margin: 0;
