--- a/ishraq-step-main/Downloads.html
+++ b/ishraq-step-main/Downloads.html
@@ -6,7 +6,7 @@
   <title>المكتبة الإلكترونية - Ishraq Step</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link href="css/buttons.css" rel="stylesheet">
-  <link rel="icon" href="icon.jpg" type="image/x-icon">
+  <link rel="icon" href="icon.png" type="image/x-icon">
   <style>
     body { font-family: 'Cairo', sans-serif; background-color: #f5f5f5; margin: 0; padding: 20px; direction: rtl; }
     header { text-align: center; font-size: 32px; font-weight: bold; margin-bottom: 20px; color: #333; }
