--- a/ishraq-step-main/ishraq-step-cours.html
+++ b/ishraq-step-main/ishraq-step-cours.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link href="css/buttons.css" rel="stylesheet">
    <link href="css/video.css" rel="stylesheet">
-  <link rel="icon" href="icon.jpg" type="image/x-icon">
+  <link rel="icon" href="icon.png" type="image/x-icon">
    <!--ads-->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
      crossorigin="anonymous">
