--- a/ishraq-step-main/posts.html
+++ b/ishraq-step-main/posts.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>المنشورات - Ishraq Step</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
-  <link rel="icon" href="icon.jpg" type="image/x-icon">
+  <link rel="icon" href="icon.png" type="image/x-icon">
   <style>
     :root{
       --bg:#f5f7fb;
