--- a/ishraq-step-main/update/books.html
+++ b/ishraq-step-main/update/books.html
@@ -307,11 +307,11 @@
      uploadProgress.style.display = 'none';
      progressBar.style.width = '0%';
 
+     // بناء payload مع تجاهل الحقول الفارغة (لا نريد الكتابة بقيم فارغة)
      const payload = {
        id,
        title: titleEl.value.trim(),
        author: authorEl.value.trim(),
-       description: descriptionEl.value.trim(),
        details: detailsEl.value.trim(),
        category: categoryEl.value.trim(),
        rating: parseFloat(ratingEl.value) || 0,
@@ -320,6 +320,10 @@
        size: window.computedSize || '',
        updatedAt: nowIso()
      };
+     // أضف الوصف فقط إذا كان غير فارغ — هذا يمنع الكتابة بقيمة '' عند التعديل
+     const desc = descriptionEl.value.trim();
+     if (desc) payload.description = desc;
+
      if (!isEdit) payload.createdAt = nowIso();
      if (coverUrl) payload.coverUrl = coverUrl;
      if (fileUrl) payload.fileUrl = fileUrl;
