--- a/ishraq-step-main/chat/start.html
+++ b/ishraq-step-main/chat/start.html
@@ -5,7 +5,7 @@
   <title>تسجيل الدخول — الدردشة</title>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <link rel="stylesheet" href="style/main.css">
-
+  <link rel="icon" href="icon.png" type="image/x-icon">
   <style>
     .progress-container {
       width: 100%;
