--- a/ishraq-step-main/update/courses.html
+++ b/ishraq-step-main/update/courses.html
@@ -1,231 +1,287 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>📹 نشر الكورسات - Ishraq Step</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ishraq Step - الدروس المرئية</title>
+<link rel="icon" href="icon.png" type="image/x-icon">
 <style>
-  body{font-family:Cairo, sans-serif; background: linear-gradient(135deg,#4caf50,#00bcd4); margin:0; padding:20px; color:#333; direction:rtl}
-  h1{text-align:center;color:white; margin-bottom:40px}
+  :root{--accent:#4caf50}
+  * { box-sizing: border-box; }
+  html, body { margin: 0; padding: 0; }
+  body {
+    font-family: 'Cairo', sans-serif;
+    background: linear-gradient(135deg, #0b0b0d 0%, #071018 100%);
+    color: #e8eef6;
+    padding: 20px;
+    direction: rtl;
+  }
+  header {
+    text-align: center;
+    color: var(--accent);
+    font-size: 24px;
+    font-weight: 800;
+    margin-bottom: 24px;
+  }
+  .container { max-width: 1200px; margin: 0 auto; }
   
-  .nav-buttons{display:flex; gap:10px; justify-content:center; margin-bottom:30px; flex-wrap:wrap}
-  .nav-btn{background:#fff; color:#4caf50; border:none; padding:10px 20px; border-radius:8px; cursor:pointer; font-weight:600; transition:all .3s}
-  .nav-btn:hover{transform:scale(1.05); box-shadow:0 5px 15px rgba(0,0,0,0.2)}
+  .sections, .subsections {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+    gap: 12px;
+    margin-bottom: 24px;
+  }
+  .section-card, .subsection-card {
+    background: linear-gradient(135deg, var(--accent), #00bcd4);
+    color: white;
+    border-radius: 12px;
+    padding: 16px;
+    text-align: center;
+    cursor: pointer;
+    font-weight: 700;
+    transition: all 0.3s;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  }
+  .section-card:hover, .subsection-card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+  }
+
+  .view { display: none; }
+  .view.active { display: block; }
   
-  .form{background:white;padding:15px;border-radius:12px;max-width:500px;margin:20px auto;box-shadow:0 4px 15px rgba(0,0,0,0.2)}
-  label{display:block;margin-top:10px;font-weight:bold}
-  input,textarea,select{width:100%;padding:8px;margin-top:5px;border:1px solid #ccc;border-radius:6px; box-sizing:border-box}
-  button{background:linear-gradient(90deg,#4caf50,#00bcd4);color:white;border:none;padding:10px;margin-top:15px;width:100%;border-radius:8px;cursor:pointer;font-size:16px; font-weight:600}
-  button:hover{opacity:.95}
+  .back-btn {
+    background: var(--accent);
+    color: white;
+    padding: 10px 16px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 700;
+    margin-bottom: 16px;
+  }
+  .back-btn:hover { opacity: 0.9; }
   
-  .sections{display:grid;grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:10px;margin-top:20px}
-  .section-card{background:linear-gradient(135deg,#4caf50,#00eeff);color:white;border-radius:14px;text-align:center;padding:14px;cursor:pointer;transition:transform .25s}
-  .section-card:hover{transform:scale(1.05)}
-  .section-card.active{box-shadow:0 6px 18px rgba(0,0,0,.25);outline:3px solid rgba(255,255,255,.06)}
+  .title { color: var(--accent); font-size: 20px; font-weight: 800; margin: 16px 0; }
   
-  .videos-list{margin-top:20px}
-  .video-item{background:white;border-radius:10px;padding:10px;margin-bottom:10px;box-shadow:0 2px 6px rgba(0,0,0,.2)}
-  .video-item iframe{width:100%;border-radius:10px}
-  .edit-btn{background:#ff9800;border:none;padding:5px 8px;border-radius:6px;cursor:pointer;color:white;margin-top:5px;margin-left:5px}
-  .delete-btn{background:#f44336;border:none;padding:5px 8px;border-radius:6px;cursor:pointer;color:white;margin-top:5px}
+  .videos-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 16px;
+    margin-top: 16px;
+  }
+  .video-card {
+    background: rgba(255, 255, 255, 0.05);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    overflow: hidden;
+    transition: all 0.3s;
+  }
+  .video-card:hover { background: rgba(255, 255, 255, 0.08); transform: translateY(-2px); }
+  
+  .video-card iframe {
+    width: 100%;
+    height: 200px;
+    border: none;
+  }
+  .video-card-content {
+    padding: 12px;
+  }
+  .video-card h3 {
+    margin: 8px 0;
+    color: var(--accent);
+    font-size: 16px;
+  }
+  .video-card p {
+    margin: 6px 0;
+    color: #9aa3af;
+    font-size: 13px;
+  }
+  
+  .loader {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 10px;
+    color: var(--accent);
+    font-weight: 700;
+    margin: 12px 0;
+    display: none;
+  }
+  .spinner {
+    width: 18px;
+    height: 18px;
+    border: 3px solid rgba(76, 175, 80, 0.3);
+    border-top-color: var(--accent);
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+  @keyframes spin { to { transform: rotate(360deg); } }
+
+  footer {
+    text-align: center;
+    color: #9aa3af;
+    font-size: 12px;
+    margin-top: 40px;
+  }
 </style>
 </head>
 <body>
+  <div class="container">
+    <header>📚 Ishraq Step - الدروس المرئية</header>
 
-<h1>📹 نشر الكورسات</h1>
+    <!-- 🎓 عرض الأقسام الرئيسية -->
+    <div id="sectionsView" class="view active">
+      <div class="sections" id="sectionsContainer"></div>
+    </div>
 
-<div class="nav-buttons">
-  <a href="courses.html" class="nav-btn" style="background:#4caf50; color:white;">📹 الكورسات</a>
-  <a href="books.html" class="nav-btn">📘 الكتب</a>
-  <a href="tests.html" class="nav-btn">الاختبارات</a>
-  <a href="../index.html" class="nav-btn">🏠 الرئيسية</a>
-</div>
+    <!-- 📂 عرض الأقسام الفرعية -->
+    <div id="subsectionsView" class="view">
+      <button class="back-btn" onclick="goBack('sections')">⬅️ رجوع للأقسام</button>
+      <div class="title" id="mainSectionTitle"></div>
+      <div class="subsections" id="subsectionsContainer"></div>
+      <div id="loader" class="loader"><div class="spinner"></div><div>جاري التحميل...</div></div>
+    </div>
 
-<div class="form">
-  <label>العنوان:</label>
-  <input id="title" type="text">
+    <!-- 🎥 عرض الفيديوهات -->
+    <div id="videosView" class="view">
+      <button class="back-btn" onclick="goBack('subsections')">⬅️ رجوع</button>
+      <div class="title" id="videoSectionTitle"></div>
+      <div id="loader2" class="loader"><div class="spinner"></div><div>جاري التحميل...</div></div>
+      <div class="videos-grid" id="videosContainer"></div>
+    </div>
+  </div>
 
-  <label>الوصف:</label>
-  <textarea id="description"></textarea>
+  <footer>© 2025 Ishraq Step – جميع الحقوق محفوظة</footer>
 
-  <label>رابط YouTube (أو ID أو iframe):</label>
-  <input id="url" type="text" placeholder="https://www.youtube.com/watch?v=XXXXXXX">
+  <script type="module">
+    import { db } from './chat/js/fb.js';
+    import { ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
-  <label>القسم:</label>
-  <select id="type">
-    <option value="">اختر القسم</option>
-    <option value="ماث 0">🧮 ماث 0</option>
-    <option value="ماث 1">🧮 ماث 1</option>
-    <option value="انجليزي">🇬🇧 إنجليزي</option>
-    <option value="دوائر كهربائية">🔌 دوائر كهربائية</option>
-    <option value="اخلاقيات المهنه">⚖️ أخلاقيات المهنة</option>
-    <option value="مقدمة حاسب الي">💻 مقدمة حاسب آلي</option>
-    <option value="فيزياء">🧲 فيزياء</option>
-  </select>
+    const views = {
+      sections: document.getElementById('sectionsView'),
+      subsections: document.getElementById('subsectionsView'),
+      videos: document.getElementById('videosView')
+    };
 
-  <!-- جديد: حقل القسم الفرعي -->
-  <label>القسم الفرعي (مثال: حروف الجر):</label>
-  <input id="subsection" type="text" placeholder="مثال: حروف الجر">
-  
-  <button id="addBtn">➕ إضافة الفيديو</button>
-</div>
+    let coursesData = {};
+    let currentType = null;
 
-<h2 style="color:white; text-align:center;">📚 الأقسام</h2>
-<div id="sections-container" class="sections"></div>
-<div id="videos-container" class="videos-list"></div>
-
-<script type="module">
-  import { db } from '../chat/js/fb.js';
-  import { ref as dbRef, push, set, onValue } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
-  
-  const titleInput = document.getElementById('title');
-  const descInput = document.getElementById('description');
-  const urlInput = document.getElementById('url');
-  const typeSelect = document.getElementById('type');
-  const subsectionInput = document.getElementById('subsection'); // جديد
-  const addBtn = document.getElementById('addBtn');
-  const sectionsContainer = document.getElementById('sections-container');
-  const videosContainer = document.getElementById('videos-container');
-
-  let jsonData = {};
-  const sections = ["ماث 0","ماث 1","انجليزي","دوائر كهربائية","اخلاقيات المهنه","مقدمة حاسب الي","فيزياء"];
-
-  let editMode = false;
-  let editId = null;
-
-  function initSections(){
-    sectionsContainer.innerHTML = '';
-    sections.forEach(type=>{
-      if(!jsonData[type]) jsonData[type] = {};
-      const card = document.createElement('div');
-      card.className = 'section-card';
-      card.textContent = type;
-      card.addEventListener('click', ()=> showSection(type));
-      sectionsContainer.appendChild(card);
+    // تحميل البيانات من Firebase
+    onValue(ref(db, 'courses'), snapshot => {
+      coursesData = snapshot.val() || {};
+      renderSections();
     });
-  }
 
-  initSections();
+    function renderSections() {
+      const sectionsContainer = document.getElementById('sectionsContainer');
+      sectionsContainer.innerHTML = '';
 
-  const coursesRef = dbRef(db, 'courses');
-  onValue(coursesRef, snapshot=>{
-    const flat = snapshot.val() || {};
-    jsonData = {};
-    sections.forEach(s => jsonData[s] = {});
-    for(const id in flat){
-      const item = flat[id];
-      if(!item.type) item.type = sections[0];
-      if(!item.subsection) item.subsection = ''; // تأكد من وجود الحقل
-      if(!jsonData[item.type]) jsonData[item.type] = {};
-      jsonData[item.type][id] = item;
-    }
-    initSections();
-  });
+      // الأقسام الرئيسية المتوقعة
+      const mainSections = [
+        { key: 'ماث 0', emoji: '🧮' },
+        { key: 'ماث 1', emoji: '🧮' },
+        { key: 'انجليزي', emoji: '🇬🇧' },
+        { key: 'دوائر كهربائية', emoji: '🔌' },
+        { key: 'اخلاقيات المهنه', emoji: '⚖️' },
+        { key: 'مقدمة حاسب الي', emoji: '💻' },
+        { key: 'فيزياء', emoji: '🧲' }
+      ];
 
-  function convertUrl(link){
-    if(!link) return '';
-    const iframeMatch = link.match(/src\s*=\s*["']([^"']+)["']/i);
-    if(iframeMatch) return iframeMatch[1].split('?')[0];
-    if(link.includes('youtube.com/embed/')) return link.split('?')[0];
-    if(/^[A-Za-z0-9_-]{11}$/.test(link)) return `https://www.youtube.com/embed/${link}`;
-    let m = link.match(/[?&]v=([^&]+)/);
-    if(m) return `https://www.youtube.com/embed/${m[1]}`;
-    m = link.match(/youtu\.be\/([^?&]+)/);
-    if(m) return `https://www.youtube.com/embed/${m[1]}`;
-    return '';
-  }
-
-  function escapeHtml(s){
-    return (s+'').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
-  }
-
-  function showSection(type){
-    document.querySelectorAll('.section-card').forEach(c=>{ c.classList.remove('active'); if(c.textContent===type) c.classList.add('active'); });
-    videosContainer.innerHTML = '';
-    const section = jsonData[type];
-    if(!section || Object.keys(section).length===0){
-      videosContainer.innerHTML = '<p style="color:white;">🚧 لا توجد فيديوهات مضافة</p>';
-      return;
-    }
-    Object.values(section).forEach(video=>{
-      const div = document.createElement('div');
-      div.className = 'video-item';
-      div.innerHTML = `
-        <iframe src="${escapeHtml(video.url)}" allowfullscreen></iframe>
-        <h3>${escapeHtml(video.title)}</h3>
-        <p>${escapeHtml(video.description)}</p>
-        <button class="edit-btn" data-id="${escapeHtml(video.id)}">✏️ تعديل</button>
-        <button class="delete-btn" data-id="${escapeHtml(video.id)}">🗑️ حذف</button>
-      `;
-      const editBtn = div.querySelector('.edit-btn');
-      editBtn.addEventListener('click', ()=> editVideo(video.type, video.id));
-      const deleteBtn = div.querySelector('.delete-btn');
-      deleteBtn.addEventListener('click', ()=> deleteVideo(video.type, video.id));
-      videosContainer.appendChild(div);
-    });
-  }
-
-  function editVideo(type, id){
-    const video = jsonData[type] && jsonData[type][id];
-    if(!video) { alert('⚠️ الفيديو غير موجود'); return; }
-    titleInput.value = video.title;
-    descInput.value = video.description;
-    urlInput.value = video.url;
-    typeSelect.value = video.type;
-    subsectionInput.value = video.subsection || ''; // جديد
-    editMode = true;
-    editId = id;
-    addBtn.textContent = '💾 حفظ التعديل';
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-  }
-
-  addBtn.addEventListener('click', async (e)=>{
-    e.preventDefault();
-    const title = titleInput.value.trim();
-    const description = descInput.value.trim();
-    const raw = urlInput.value.trim();
-    const url = convertUrl(raw);
-    const type = typeSelect.value;
-    const subsection = subsectionInput.value.trim(); // جديد
-
-    if(!title || !description || !url || !type){
-      alert('⚠️ يرجى ملء جميع الحقول');
-      return;
+      mainSections.forEach(section => {
+        const card = document.createElement('div');
+        card.className = 'section-card';
+        card.textContent = `${section.emoji} ${section.key}`;
+        card.addEventListener('click', () => showSubsections(section.key));
+        sectionsContainer.appendChild(card);
+      });
     }
 
-    if(editMode && editId){
-      const video = { title, description, url, type, subsection, id: editId };
-      await set(dbRef(db, `courses/${editId}`), video);
-      editMode = false;
-      editId = null;
-      addBtn.textContent = '➕ إضافة الفيديو';
-      alert('✅ تم حفظ التعديل');
-    } else {
-      const newRef = push(coursesRef);
-      const id = newRef.key;
-      const video = { title, description, url, type, subsection, id };
-      await set(newRef, video);
-      alert('✅ تم إضافة الفيديو');
+    function showSubsections(type) {
+      currentType = type;
+      document.getElementById('mainSectionTitle').textContent = `🎓 ${type}`;
+      document.getElementById('subsectionsContainer').innerHTML = '';
+      showLoader('loader', true);
+
+      const subsectionsContainer = document.getElementById('subsectionsContainer');
+      
+      // الحصول على الأقسام الفرعية
+      const subsections = coursesData[type] ? Object.keys(coursesData[type]) : [];
+
+      if (subsections.length === 0) {
+        subsectionsContainer.innerHTML = '<div style="color:#9aa3af;padding:16px">لا توجد أقسام فرعية</div>';
+        showLoader('loader', false);
+        switchView('subsections');
+        return;
+      }
+
+      subsections.forEach(subsection => {
+        const card = document.createElement('div');
+        card.className = 'subsection-card';
+        const count = Object.keys(coursesData[type][subsection]).length;
+        card.textContent = `📁 ${subsection} (${count})`;
+        card.addEventListener('click', () => showVideos(type, subsection));
+        subsectionsContainer.appendChild(card);
+      });
+
+      showLoader('loader', false);
+      switchView('subsections');
     }
 
-    titleInput.value='';
-    descInput.value='';
-    urlInput.value='';
-    typeSelect.value='';
-    subsectionInput.value=''; // جديد: افراغ الحقل
-  });
+    function showVideos(type, subsection) {
+      document.getElementById('videoSectionTitle').textContent = `🎥 ${type} > ${subsection}`;
+      document.getElementById('videosContainer').innerHTML = '';
+      showLoader('loader2', true);
 
-  async function deleteVideo(type, id){
-    if(!confirm('هل أنت متأكد من حذف هذا الفيديو؟')) return;
-    try {
-      await set(dbRef(db, `courses/${id}`), null);
-      alert('✅ تم حذف الفيديو');
-      showSection(type);
-    } catch(error){
-      alert('❌ حدث خطأ في الحذف: ' + error.message);
+      const videosContainer = document.getElementById('videosContainer');
+      const videos = coursesData[type] && coursesData[type][subsection] ? Object.values(coursesData[type][subsection]) : [];
+
+      if (videos.length === 0) {
+        videosContainer.innerHTML = '<div style="color:#9aa3af;padding:16px">لا توجد فيديوهات</div>';
+        showLoader('loader2', false);
+        switchView('videos');
+        return;
+      }
+
+      videos.forEach(video => {
+        const card = document.createElement('div');
+        card.className = 'video-card';
+        card.innerHTML = `
+          <iframe src="${escapeHtml(video.url)}" allowfullscreen></iframe>
+          <div class="video-card-content">
+            <h3>${escapeHtml(video.title)}</h3>
+            <p>${escapeHtml(video.description)}</p>
+          </div>
+        `;
+        videosContainer.appendChild(card);
+      });
+
+      showLoader('loader2', false);
+      switchView('videos');
     }
-  }
 
-</script>
+    function switchView(viewName) {
+      Object.values(views).forEach(v => v.classList.remove('active'));
+      views[viewName].classList.add('active');
+    }
+
+    function showLoader(id, show) {
+      const el = document.getElementById(id);
+      if (el) el.style.display = show ? 'flex' : 'none';
+    }
+
+    function goBack(viewName) {
+      switchView(viewName);
+    }
+
+    function escapeHtml(s) {
+      return (s || '').replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
+    }
+
+    window.goBack = goBack;
+  </script>
 </body>
 </html>
