--- a/ishraq-step-main/ishraq-step-cours.html
+++ b/ishraq-step-main/ishraq-step-cours.html
@@ -8,14 +8,26 @@
   <link href="css/buttons.css" rel="stylesheet">
    <link href="css/video.css" rel="stylesheet">
   <link rel="icon" href="icon.png" type="image/x-icon">
+  
+  <link rel="stylesheet" href="css/open-sidebar.css">
+
    <!--ads-->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
      crossorigin="anonymous">
       </script>
       
+  
 </head>
 
-<body>   
+<body>  
+  
+  <input type="checkbox" id="toggleSidebar">
+ <label for="toggleSidebar" class="toggle-btn">
+  ☰ اخفاء القائمة
+ </label>
+ 
+ <iframe id="siteSidebar" src="sidebar.html"></iframe>
+
    <header>📚 Ishraq Step - كورسات و دورات</header>
  <div class="container">
   
@@ -51,6 +63,7 @@
  <footer>© 2025 Ishraq Step – جميع الحقوق محفوظة</footer>
 
 </div>
+
 </body>
 
 </html>
