--- a/ishraq-step-main/tests.html
+++ b/ishraq-step-main/tests.html
@@ -11,8 +11,6 @@
   body{font-family:'Cairo',sans-serif;margin:0;background:linear-gradient(135deg,#0b0b0d 0%,#071018 100%);color:#e8eef6;padding:28px;direction:rtl}
   header{font-weight:800;color:var(--accent);text-align:center;font-size:20px;margin-bottom:18px}
   .container{max-width:1100px;margin:0 auto}
-  .nav{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;margin-bottom:18px}
-  .nav a{background:#fff;color:var(--accent);padding:8px 12px;border-radius:8px;text-decoration:none;font-weight:700}
   .sections{display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:12px}
   .section-card{background:linear-gradient(135deg,var(--accent),#00bcd4);color:#fff;padding:16px;border-radius:12px;text-align:center;cursor:pointer;box-shadow:0 6px 20px rgba(0,0,0,.4)}
   .loader{display:flex;gap:10px;align-items:center;justify-content:center;padding:12px;background:#fff;color:#333;border-radius:10px;margin:12px 0}
@@ -22,19 +20,24 @@
   .test-item{background:#0f1113;border:1px solid rgba(255,255,255,0.03);padding:12px;border-radius:10px;margin-bottom:10px;display:flex;gap:12px;align-items:flex-start}
   .test-meta{flex:1}
   .test-meta h3{margin:0 0 6px 0;color:#ffd166;font-size:18px}
-  .test-meta p{margin:0;color:#9aa3af}
+  .test-meta p{margin:0;color:#af9aa8}
   .back{display:inline-block;margin:12px 0;padding:8px 12px;background:#fff;color:var(--accent);border-radius:8px;text-decoration:none}
   .muted{color:#9aa3af;font-size:13px}
 </style>
+
+  <link rel="stylesheet" href="css/open-sidebar.css">
 </head>
 <body>
+  
+  <input type="checkbox" id="toggleSidebar">
+ <label for="toggleSidebar" class="toggle-btn">
+  ☰ اخفاء القائمة
+ </label>
+ 
+ <iframe id="siteSidebar" src="sidebar.html"></iframe>
+
   <div class="container">
     <header>📝 اختبارات Ishraq Step</header>
-
-    <nav class="nav" aria-label="روابط">
-      <a href="index.html">🏠 الرئيسية</a>
-      <a href="ishraq-step-youtupe.html">📹 الدروس المرئية</a>
-    </nav>
 
     <div id="loader" class="loader" style="display:none"><div class="spinner" aria-hidden="true"></div><div>جارٍ التحميل...</div></div>
 
@@ -151,5 +154,7 @@
     function escapeHtml(s){ return (s||'').toString().replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;'); }
     function escapeAttr(s){ return (s||'').toString().replaceAll('"','%22'); }
   </script>
+   
+ <iframe src="sidebar.html" id="siteSidebar" title="قائمة جانبية — Ishraq Step"></iframe>
 </body>
 </html>
