--- a/ishraq-step-main/index.html
+++ b/ishraq-step-main/index.html
@@ -21,7 +21,7 @@
 <body>
   <input type="checkbox" id="toggleSidebar">
  <label for="toggleSidebar" class="toggle-btn">
-  ☰ اخفاء القائمة
+  ☰  القائمة
  </label>
  
  <iframe id="siteSidebar" src="sidebar.html"></iframe>
