--- a/ishraq-step-main/ishraq-step-cours.html
+++ b/ishraq-step-main/ishraq-step-cours.html
@@ -23,7 +23,7 @@
   
   <input type="checkbox" id="toggleSidebar">
  <label for="toggleSidebar" class="toggle-btn">
-  ☰ اخفاء القائمة
+  ☰  القائمة
  </label>
  
  <iframe id="siteSidebar" src="sidebar.html"></iframe>
