--- a/ishraq-step-main/chat/chat.html
+++ b/ishraq-step-main/chat/chat.html
@@ -38,6 +38,36 @@
     .user-modal h3 { margin: 10px 0 5px; }
     .user-modal .muted { color: #666; font-size: 13px; margin-bottom: 10px; }
     .user-modal .btn { width: 100%; margin-top: 8px; }
+    .loading-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 10000;
+      flex-direction: column;
+      gap: 20px;
+    }
+    .loading-overlay.hidden {
+      display: none;
+    }
+    .spinner {
+      width: 60px;
+      height: 60px;
+      border: 4px solid rgba(255,255,255,0.2);
+      border-top-color: #fff;
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+    }
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+    .loading-text {
+      color: #fff;
+      font-size: 16px;
+      text-align: center;
+    }
   </style>
    <!--ads-->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
@@ -45,6 +75,10 @@
       </script>
 </head>
 <body>
+  <div id="loadingOverlay" class="loading-overlay">
+    <div class="spinner"></div>
+    <div class="loading-text">جاري تحميل البيانات...</div>
+  </div>
   <div class="wrap">
     <div class="card chat-col">
       <div class="chat-header">
@@ -103,6 +137,8 @@
       update
     } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
 
+    const loadingOverlay = document.getElementById('loadingOverlay');
+
     const messagesDiv = document.getElementById('messages');
     const msgText = document.getElementById('msgText');
     const sendBtn = document.getElementById('sendBtn');
@@ -141,7 +177,12 @@
 
     const bansRef = dbRef(db, 'bans');
     let bans = {};
-    onValue(bansRef, (snap) => { bans = snap.val() || {}; });
+    let bansLoaded = false;
+    onValue(bansRef, (snap) => {
+      bans = snap.val() || {};
+      bansLoaded = true;
+      if (bansLoaded) loadingOverlay.classList.add('hidden');
+    });
 
     // ✅ مراقبة حالة الدردشة
     const chatStatusRef = dbRef(db, 'chat_status');
@@ -186,11 +227,16 @@
 
     // === استقبال الرسائل ===
     const messagesRef = dbRef(db, 'messages');
+    let firstMessageLoaded = false;
     onChildAdded(messagesRef, (snap) => {
       const m = snap.val();
       if (!m) return;
       if (bans[m.deviceId]) return;
       appendMessage(m, snap.key);
+      if (!firstMessageLoaded) {
+        firstMessageLoaded = true;
+        loadingOverlay.classList.add('hidden');
+      }
     });
 
     onChildRemoved(messagesRef, (snap) => {
