--- a/ishraq-step-main/sidebar.html
+++ b/ishraq-step-main/sidebar.html
@@ -36,7 +36,7 @@
         <div class="logo">IS</div>
         <div>
           <div class="title">Ishraq Step</div>
-          <div class="desc">منصة التعلم الإلكتروني</div>
+          <div class="desc">اسم المستخدم</div>
         </div>
       </div>
 
@@ -45,9 +45,8 @@
         <a class="link" href="index.html"><span>🏠</span><span class="link-text">الرئيسية</span></a>
         <a class="link" href="tests.html"><span>📝</span><span class="link-text">الاختبارات</span></a>
         <a class="link" href="ishraq-step-youtupe.html"><span>📹</span><span class="link-text">الدروس</span></a>
-        <a class="link" href="ishraq-step-cours.html"><span>📚</span><span class="link-text">الكورسات</span></a>
         <a class="link" href="Downloads.html"><span>📘</span><span class="link-text">الكتب</span></a>
-        <a class="link" href="chat/start.html"><span>💬</span><span class="link-text">الدردشة</span></a>
+        <a class="link" href="chat/start.html"><span>💬</span><span class="link-text">التعليقات</span></a>
       </nav>
 
       <div class="small">الأدوات</div>
